--- a/app/login.html
+++ b/app/login.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <meta charset="UTF-8">
     <title>Login page</title>
 </head>
-<body>
+<body style="padding:40px">
+<div class="panel panel-default" style="width: 400px;margin:auto">
+    <div class="panel-heading">
+        <h3 class="panel-title">Login</h3>
+        </div>
     <form method="post" action="login">
         <fieldset >
-            <legend>Login</legend>
+
 
             <label for="username">
                 Username:
@@ -22,5 +27,6 @@
             <input type="submit" value="Log in" />
         </fieldset>
     </form>
+</div>
 </body>
 </html>
