--- a/app/WEB-INF/huurder.html
+++ b/app/WEB-INF/huurder.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <meta charset="UTF-8">
     <title>Customer</title>
 </head>
-<body>
+<body style="padding:40px">
     <p>
         <a href="listUsers">Beheer</a> // <a href="logout">Logout</a>
     </p>
