--- a/app/fouteinlog.html
+++ b/app/fouteinlog.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <meta charset="UTF-8">
     <title>Wrong login</title>
 </head>
-<body>
+<body style="padding:40px">
     <p>
         Wrong username or password<br />
         <a href="login.html">Go back and try again</a>
