--- a/app/index.html
+++ b/app/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <meta charset="UTF-8">
     <title>Homepage</title>
 </head>
-<body>
+<body style="padding:40px">
     <h1>Looking for rental apartments? Look no further...</h1>
     <p>
         But to proceed.. please login or register first*
