--- a/app/registreer.html
+++ b/app/registreer.html
@@ -1,33 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <meta charset="UTF-8">
     <title>Register</title>
 </head>
-<body>
-    <form method="post" action="register">
-        <fieldset >
-            <legend>Register</legend>
+<body style="padding:40px">
+    <div class="panel panel-default" style="width: 400px;margin:auto">
+        <div class="panel-heading">
+            <h3 class="panel-title">Register</h3>
+        </div>
+        <form method="post" action="register">
+            <fieldset >
 
-            <label for="username">
-                Username:
-            </label>
-            <input type="text" name="username" id="username" /><br />
 
-            <label for="password">
-                Password:
-            </label>
-            <input type="password" name="password" id="password" /><br />
+                <label for="username" style="width:150px">
+                    Username:
+                </label>
+                <input type="text" name="username" id="username" /><br />
 
-            Account type:
-            <input type="radio" name="type" id="type_customer" value="c" checked="checked" />
-            <label for="type_customer">Customer</label>
+                <label for="password" style="width:150px">
+                    Password:
+                </label>
+                <input type="password" name="password" id="password" /><br />
 
-            <input type="radio" name="type" id="type_owner" value="o" />
-            <label for="type_owner">Owner</label> <br />
+                Account type:
+                <input type="radio" name="type" id="type_customer" value="c" checked="checked" />
+                <label for="type_customer">Customer</label>
 
-            <input type="submit" value="Register" />
-        </fieldset>
-    </form>
+                <input type="radio" name="type" id="type_owner" value="o" />
+                <label for="type_owner">Owner</label> <br />
+
+                <input type="submit" value="Register" />
+            </fieldset>
+        </form>
+    </div>
 </body>
 </html>
